fix [#34905] Text editor: replacing matches by empty string not allowed